--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -8,7 +8,7 @@
     <p>{{ pin.description }}</p>
   </article>
   <a href="{{ path('app_pins_edit', {id: pin.id}) }}">Edit</a> |
-  <a href="#" onclick="event.preventDefault(); confirm('Are you sure') &&
+  <a href="#" onclick="event.preventDefault(); confirm('Are you sure?') &&
   document.getElementById('js-pin-delete-form').submit();">Delete</a> |
   <a href="{{ path('app_home') }}">Go Back</a>
 
