--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,39 +7,47 @@
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+            <style media="screen">
+              .alert{
+                padding: 10px;
+                color: white;
+                text-align: center;
+                margin: 0;
+                border:none;
+                border-radius: 0;
+              }
+              .alert-success{
+                background-color: green;
+              }
+              .alert-error{
+                background-color: red;
+              }
+              .alert-info{
+                background-color: blue;
+              }
+            </style>
         {% endblock %}
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
         {% endblock %}
 
-        <style media="screen">
-          .alert{
-            padding: 10px;
-            color: white;
-            text-align: center;
-          }
-          .alert-success{
-            background-color: green;
-          }
-          .alert-error{
-            background-color: red;
-          }
-          .alert-info{
-            background-color: blue;
-          }
-        </style>
     </head>
     <body>
 
       {{ include('partials/_flash_messages.html.twig') }}
 
-      <nav>
-          <ul>
-              <li><a href="{{ path('app_home') }}">Home</a></li>
-              <li><a href="{{ path('app_pins_create') }}">New Pin</a></li>
-          </ul>
-      </nav>
-        {% block body %}{% endblock %}
+      {{ include('partials/_nav.html.twig') }}
+
+        <main role="main" class="container">
+          {% block body %}{% endblock %}
+        </main>
+
+      {{ include('partials/_footer.html.twig') }}
     </body>
 </html>
