--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -10,7 +10,7 @@
       <div class="row mb-5">
         {% for pin in row %}
           <div class="col-md-4">
-            <article class="pin bg rounded shadow">
+            <article class="pin bg-white rounded shadow">
               <div class="mw-100 overflow-hidden">
                 <a href="{{ path('app_pins_show',{id: pin.id} ) }}">
                   <img src="{{ (pin.imageName ? vich_uploader_asset(pin) : asset('build/images/placeholder.jpg')) | imagine_filter('squared_thumbnail_medium') }}" alt="{{ pin.title }}" class="w-100 rounded-top" />
