--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -18,7 +18,7 @@
               </div>
               <h2 class="h5 pl-3 pt-3"><a href="{{ path('app_pins_show',{id: pin.id} ) }}" class="text-secondary text-decoration-none">{{pin.title}}</a></h2>
               {#<p>{{ pin.description|u.truncate(10, ' ...', false) }}</p>#}
-              <p class="pl-3 pb-3 text-muted"><small>Submitted by {{ pin.user.fullName }} </small></p>
+              <p class="pl-3 pb-3 text-muted"><small>Submitted by {{ pin.user.fullName }} </small></p> {# {{ pin.user.fullName }} #}
             </article>
           </div>
         {% endfor %}
