--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -49,7 +49,7 @@
             <button class="btn btn-lg btn-block btn-primary" type="submit">
                 Sign in
             </button>
-            <p class="mt-5 mb-3 text-center text-muted">Not Registered yet? <a href="#">Create an account</a></p>
+            <p class="mt-5 mb-3 text-center text-muted">Not Registered yet? <a href="{{ path('app_register') }}">Create an account</a></p>
         </form>
     </div>
 </div>
