--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -19,6 +19,16 @@
               <h2 class="h5 pl-3 pt-3"><a href="{{ path('app_pins_show',{id: pin.id} ) }}" class="text-secondary text-decoration-none">{{pin.title}}</a></h2>
               {#<p>{{ pin.description|u.truncate(10, ' ...', false) }}</p>#}
               <p class="pl-3 pb-3 text-muted"><small>Submitted by {{ pin.user.fullName }} </small></p>
+
+              {# Si on voulait mettre un bouton de suppression de pin à l'accueil #}
+          {#    <a href="#" onclick="event.preventDefault(); confirm('Are you sure?') &&
+              document.getElementById('js-pin-delete-form-{{ pin.id }}').submit();" class="m-3 btn btn-danger">&times; Delete</a>
+
+              <form id="js-pin-delete-form-{{ pin.id }}" action="{{ path('app_pins_delete', {id: pin.id}) }}" method="post" style="display:none;">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token('pin_deletion_' ~ pin.id) }}">
+                <input type="hidden" name="_method" value="DELETE">
+              </form>  #}
+
             </article>
           </div>
         {% endfor %}
