--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,7 +43,7 @@
                         </label>
                     </div>
                 </div>
-                <a href="#">forgot password?</a>
+                <a href="{{ path('app_forgot_password_request')}}">forgot password?</a>
             </div>
 
             <button class="btn btn-lg btn-block btn-primary" type="submit">
