--- a/templates/account/show.html.twig
+++ b/templates/account/show.html.twig
@@ -14,7 +14,8 @@
         <h2>{{ app.user.fullName }}</h2>
         <p><small> Account created on {{ app.user.createdAt|date('d/m/y') }}</small></p>
 
-        <p> <a href="{{ path('app_account_edit') }}">Edit Account</a> | <a href="">Change Password</a> </p>
+        <p> <a href="{{ path('app_account_edit') }}">Edit Account</a> |
+        <a href="{{ path('app_account_change_password') }}">Change Password</a> </p>
     </div>
 </div>
 {% endblock %}
