Add PinVoter and simplify access control checks

--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -21,6 +21,7 @@
 
         <p class="pt-3 text-break">{{ pin.description }}</p>
 
+        {% if is_granted('PIN_MANAGE', pin) %} {# ou {% if app.user == pin.user %} #}
         <div class="pt-3">
           <a href="{{ path('app_pins_edit', {id: pin.id}) }}" class="btn btn-light">Edit</a>
           <a href="#" onclick="event.preventDefault(); confirm('Are you sure?') &&
@@ -31,6 +32,7 @@
             <input type="hidden" name="_method" value="DELETE">
           </form>
         </div>
+        {% endif %}
       </div>
     </article>
   </div>
